--- a/app/src/main/res/layout/activity_scroll.xml
+++ b/app/src/main/res/layout/activity_scroll.xml
@@ -33,25 +33,25 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="10dp"
-                android:text="Empire state building is located in the New York, US"
+                android:text="@string/empire_state_building_is_located_in_the_new_york_us"
                 android:textSize="30sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="10dp"
-                android:text="Empire state building is located in the New York, US"
+                android:text="@string/empire_state_building_is_located_in_the_new_york_us"
                 android:textSize="30sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="10dp"
-                android:text="Empire state building is located in the New York, US"
+                android:text="@string/empire_state_building_is_located_in_the_new_york_us"
                 android:textSize="30sp" />
 
         </LinearLayout>
